# EdgeInfer

./: CMakeLists.txt  README.md
cmake/: dependencies.cmake  rk.cmake  rkpro.cmake
models/: cardet_800_480_1_0_5.rknn  cardet_800_480_255_127.rknn  det_capture.rknn  det_monitor.rknn
models/car_performance/: rknn_convert.py
models/car_performance/caffe_models/: lpr_160_40 copy.prototxt.kkk  lpr_160_40.prototxt  model_config.yml
models/car_performance/onnx_models/: cardet_800_480.onnx  dataset.txt  lpd_960_540.onnx  model_config.yml
models/car_performance/rv_models/: cardet.rknn
modules/: CMakeLists.txt
modules/infer_engine/: CMakeLists.txt
modules/infer_engine/include/: ie_blob.hpp  ie_engine.hpp  ie_errcode.hpp  ie_params.hpp  ie_preprocess.hpp  infer_engine_api.h
modules/infer_engine/include/engine/: engine_nnie.hpp  engine_rknn.hpp  engine_tengine.hpp
modules/infer_engine/src/: ie_engine.cpp  ie_errcode.cpp  ie_preprocess.cpp  infer_engine_api.cpp
modules/infer_engine/src/engine/: engine_nnie.cpp  engine_rknn.cpp  engine_tengine.cpp
modules/video_engine/: CMakeLists.txt
modules/video_engine/include/: DataSource.h  Decode.h  RKMPPDecode.h  RtspClient.h  VideoInput.hpp
modules/video_engine/src/: DataSource.cpp  RKMPPDecode.cpp  RtspClient.cpp  VideoInput.cpp
src/: main.cpp
